--- a/data-gov-challenge/package.json
+++ b/data-gov-challenge/package.json
@@ -18,7 +18,8 @@
     "papaparse": "^5.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-papaparse": "^4.4.0"
+    "react-papaparse": "^4.4.0",
+    "react-select": "^5.8.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
